--- a/cityharvest/app/beliefs.html
+++ b/cityharvest/app/beliefs.html
@@ -21,7 +21,7 @@
     <!-- === Title === -->
     <title>City Harvest Church | Contact</title>
     <!-- === CSS === -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/about.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/get_involved.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/header.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/footer.css">
@@ -42,9 +42,9 @@
         <div class="navbar-menu">
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="../index.html" class="nav-link change-Color">Home</a></li>
-                <li class="nav-item"><a href="#home" class="nav-link active">About</a></li>
+                <li class="nav-item"><a href="about.html" class="nav-link change-Color">About</a></li>
                 <li class="nav-item"><a href="sermons.html" class="nav-link change-Color">Sermons</a></li>
-                <li class="nav-item"><a href="get_involved.html" class="nav-link change-Color ">Get Involved</a></li>
+                <li class="nav-item"><a href="#home" class="nav-link active">Get Involved</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Resources</a></li>
                 <li class="nav-item"><a href="events.html" class="nav-link change-Color">Events</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
@@ -64,156 +64,155 @@
             <div class="container">
                 <div class="row">
                     <div class="hero-txt">
-                        <h2>WhO We Are</h2>
-                        <!-- <p class="lead text-secondary">
+                        <h2>Get Involved</h2>
+                        <p class="lead text-secondary">
                             There is always a place for you, just ride in.
-                        </p> -->
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- == About == -->
-        <section id="about">
-            <div class="container">
-                <h1 class="about-title">About</h1>
-                <div class="even-columns">
-                    <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-body">
-                            <p>
-                                Never leave your friends behind, let them experience the goodness of God here at City
-                                Harvest.
-                                Never leave your friends behind, let them experience the goodness of God here at City
-                                Harvest.
-                                Never leave your friends behind, let them experience the goodness of God here at City
-                                Harvest.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="even-columns">
-                    <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-body">
-                            <h2>Mission</h2>
-                            <p>
-                                Never leave your friends behind, let them experience the goodness of God here at City
-                                Harvest.
-                                Never leave your friends behind, let them experience the goodness of God here at City
-                                Harvest.
-                                Never leave your friends behind, let them experience the goodness of God here at City
-                                Harvest.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-body">
-                            <h2>Vision</h2>
-                            <p>
-                                For Your Professionals And College Students Who Are Committed To Excellence.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- == Pastors == -->
-        <section id="pastors">
-            <div class="container">
-                <h1 class="pastors-title">Our Pastors</h1>
-                <div class="row even-columns">
-                    <div class="pastors-img" data-aos="zoom-in-up" data-aos-delay="100">
-                        <img src="../assets/img/pastors/lead-pastors.png" alt="">
-                    </div>
-                    <div class="pastors-txt" data-aos="zoom-in-up" data-aos-delay="100">
-                        <h1 class="lead"> WORD FROM OUR LEAD PASTORS</h1>
-                        <h1>Rev. Arch. Yared Dondo & Pastor Matilda Dondo</h1>
-                        <p class="text-justify">
-                            <br>
-                            City Harvest is a church designed for college students and young professionals. It is a home
-                            away from home. It is a place where you will discover your talents, nurture them, learn from
-                            others, and others learn from you.
-                            <br>
-                            <br>
-                            Ever since the church started, we have strived to reach college students with the message of
-                            the love of Christ, we have seen many of them get transformed and now, after college, being
-                            tools to transform other college students and their fellow professionals.
-                            <br>
-                            <br>
-                            We personally welcome you to be part of this great family.
-                            <br>
-                            <b>Karibu sana and Be Transformed to transform.</b>
                         </p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- == weekly-services == -->
-        <section id="weekly-services">
+        <!-- == Get involved == -->
+        <section id="get_involved">
             <div class="container">
-                <h1 class="weekly-services-title" data-aos="fade-right" data-aos-delay="100">WEEKLY SERVICES</h1>
                 <div class="even-columns">
-                    <div class="card bg-white" data-aos="flip-up" data-aos-delay="100">
-                        <div class="card-body">
-                            <h2>SUNDAY</h2>
-                            <p>
-                            <div class="first-service">
-                                First Service:
-                                <br>
-                                <small><b>7:00 AM - 9:00 AM</b></small>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/get-involved/invite.jpg" alt="" class="card-img-top img-fluid">
                             </div>
-                            <hr>
-                            <div class="second-service">
-                                Second Service:
-                                <br>
-                                <small><b>09:30 AM - 12:30 PM</b></small>
-                            </div>
-                            </p>
                         </div>
-                        <div class="weekly-services-text">
-                            <span>SERVICE</span>
+                        <div class="card-body">
+                            <h2>Invite</h2>
+                            <p>
+                                Never leave your friends behind, let them experience the goodness of God here at City
+                                Harvest.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/get-involved/serve.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>Serve</h2>
+                            <p>
+                                At City Harvest, there are many opportunities to serve God. Let's do it together.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">Learn More</a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="even-columns">
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/get-involved/volunteer.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
                         <div class="card-body">
-                            <h2>TUESDAY</h2>
+                            <h2>Volunteer</h2>
                             <p>
-                                WELL.COM Groups:
-                                <br>
-                                <small><b>5:00 PM</b></small>
+                                There is always a place for you, just ride in.
                             </p>
-                        </div>
-                        <div class="weekly-services-text">
-                            <span>SERVICE</span>
-                        </div>
-                    </div>
-                    <div class="card" id="wed" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-body">
-                            <h2>WEDNESDAY</h2>
-                            <p>
-                                Evening Service:
-                                <br>
-                                <small><b>4:30 PM - 6:00 PM</b></small>
-                            </p>
-                        </div>
-                        <div class="weekly-services-text">
-                            <span>SERVICE</span>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">Learn More</a>
+                            </div>
                         </div>
                     </div>
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-body">
-                            <h2>FRIDAY</h2>
-                            <p>
-                                Evening Prayers:
-                                <br>
-                                <small><b>4:30 PM - 6:00 PM</b></small>
-                            </p>
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/get-involved/outreach.jpg" alt=""
+                                    class="card-img-top img-fluid">
+                            </div>
                         </div>
-                        <div class="weekly-services-text">
-                            <span>SERVICE</span>
+                        <div class="card-body">
+                            <h2>OutReach</h2>
+                            <p>
+                                Go and make people disciples of chirst.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/get-involved/give.jpg" alt=""
+                                    class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>Giving</h2>
+                            <p>
+                                Give generously and with a cheerful heart.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="even-columns">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/get-involved/prayer.jpg" alt=""
+                                    class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>Prayer Meetings</h2>
+                            <p>
+                                Get together every Friday to seek God and His power.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/get-involved/bible.jpg" alt=""
+                                    class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>Bible Study</h2>
+                            <p>
+                                Get together every Wednesday to learn the word of God.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/get-involved/groups.jpg" alt=""
+                                    class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>WELL.COM GROUPS</h2>
+                            <p>
+                                Fellowship with other members weekly in small groups.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">Learn More</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -233,8 +232,8 @@
                     <ul class="nav-menu">
                         <li class="nav-item"><a href="" class="nav-link">Give</a></li>
                         <li class="nav-item"><a href="" class="nav-link">I'm New</a></li>
-                        <li class="nav-item"><a href="events.html" class="nav-link">Events</a></li>
-                        <li class="nav-item"><a href="get_involved.html" class="nav-link">Get Involved</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Events</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Get Involved</a></li>
                         <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
@@ -298,7 +297,7 @@
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
     <script src="../assets/js/others.js"></script>
-    <script src="../assets/js/about.js"></script>
+    <script src="../assets/js/get_involved.js"></script>
 </body>
 
 </html>
