--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -41,7 +41,41 @@
         <div class="navbar-menu">
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="#home" class="nav-link active">Home</a></li>
-                <li class="nav-item"><a href="app/about.html" class="nav-link change-Color">About</a></li>
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link change-Color">About
+                        <ul class="dropdown-menu">
+                            <li class="nav-item">
+                                <a href="app/about.html" class="nav-link">Who We Are</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="app/leaders.html" class="nav-link">Leadership</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="app/beliefs.html" class="nav-link">What We Believe</a>
+                            </li>
+                            <li class="nav-item dropdown-location">
+                                <a href="#" class="nav-link">Locations <i class="fas fa-angle-down"></i></a>
+                                <ul class="dropdown-menu-location">
+                                    <li class="nav-item">
+                                        <a href="app/contact.html" class="nav-link">Bahari Beach</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="app/ch_kigamboni.html" class="nav-link">Kigamboni</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="app/ch_dodoma.html" class="nav-link">Dodoma</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="app/ch_mwanza.html" class="nav-link">Mwanza</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="app/ch_india.html" class="nav-link">India</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="app/sermons.html" class="nav-link change-Color">Sermons</a></li>
                 <li class="nav-item"><a href="app/get_involved.html" class="nav-link change-Color">Get Involved</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Resources</a></li>
@@ -132,6 +166,7 @@
                 </div>
             </div>
         </section>
+
         <!-- == Pastors == -->
         <section id="pastors">
             <div class="container">
@@ -162,6 +197,7 @@
                 </div>
             </div>
         </section>
+
         <!-- == Paralax == -->
         <section id="paralax">
             <div class="container">
