more about pages have been added

--- a/cityharvest/app/about.html
+++ b/cityharvest/app/about.html
@@ -65,9 +65,6 @@
                 <div class="row">
                     <div class="hero-txt">
                         <h2>WhO We Are</h2>
-                        <!-- <p class="lead text-secondary">
-                            There is always a place for you, just ride in.
-                        </p> -->
                     </div>
                 </div>
             </div>
@@ -78,7 +75,7 @@
             <div class="container">
                 <h1 class="about-title">About</h1>
                 <div class="even-columns">
-                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                    <div class="card">
                         <div class="card-body">
                             <p>
                                 Never leave your friends behind, let them experience the goodness of God here at City
