--- a/cityharvest/app/leaders.html
+++ b/cityharvest/app/leaders.html
@@ -21,7 +21,7 @@
     <!-- === Title === -->
     <title>City Harvest Church | Contact</title>
     <!-- === CSS === -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/get_involved.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/leaders.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/header.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/footer.css">
@@ -42,12 +42,12 @@
         <div class="navbar-menu">
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="../index.html" class="nav-link change-Color">Home</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link change-Color">About</a></li>
+                <li class="nav-item"><a href="#home" class="nav-link active">About</a></li>
                 <li class="nav-item"><a href="sermons.html" class="nav-link change-Color">Sermons</a></li>
-                <li class="nav-item"><a href="#home" class="nav-link active">Get Involved</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Resources</a></li>
+                <li class="nav-item"><a href="get_involved.html" class="nav-link change-Color">Get Involved</a></li>
+                <li class="nav-item"><a href="#" class="nav-link change-Color">Resources</a></li>
                 <li class="nav-item"><a href="events.html" class="nav-link change-Color">Events</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
+                <li class="nav-item"><a href="#" class="nav-link change-Color">Ministries</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link change-Color">Contact</a></li>
             </ul>
             <div class="flex-space-between login-give">
@@ -64,50 +64,76 @@
             <div class="container">
                 <div class="row">
                     <div class="hero-txt">
-                        <h2>Get Involved</h2>
+                        <h2>Leadership</h2>
                         <p class="lead text-secondary">
-                            There is always a place for you, just ride in.
+                            Get to know the crew of our chuch leaders.
                         </p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- == Get involved == -->
-        <section id="get_involved">
+        <!-- == Pastors == -->
+        <section id="pastors">
             <div class="container">
+                <h1 class="pastors-title">Leader Pastors</h1>
+                <div class="row even-columns">
+                    <div class="pastors-img" data-aos="zoom-in-up" data-aos-delay="100">
+                        <img src="../assets/img/pastors/lead-pastors.png" alt="">
+                    </div>
+                    <div class="pastors-txt" data-aos="zoom-in-up" data-aos-delay="100">
+                        <h1 class="lead"> WORD FROM OUR LEAD PASTORS</h1>
+                        <h1>Rev. Arch. Yared Dondo & Pastor Matilda Dondo</h1>
+                        <p class="text-justify">
+                            <br>
+                            City Harvest is a church designed for college students and young professionals. It is a home
+                            away from home. It is a place where you will discover your talents, nurture them, learn from
+                            others, and others learn from you.
+                            <br>
+                            <br>
+                            Ever since the church started, we have strived to reach college students with the message of
+                            the love of Christ, we have seen many of them get transformed and now, after college, being
+                            tools to transform other college students and their fellow professionals.
+                            <br>
+                            <br>
+                            We personally welcome you to be part of this great family.
+                            <br>
+                            <b>Karibu sana and Be Transformed to transform.</b>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- == Other Pastors == -->
+        <section id="other-pastors">
+            <div class="container">
+                <h1 class="other-pastors-title">Associate Pastors</h1>
                 <div class="even-columns">
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-img">
                             <div class="card-inner">
-                                <img src="../assets/img/get-involved/invite.jpg" alt="" class="card-img-top img-fluid">
+                                <img src="../assets/img/pastors/pst-minja.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>Invite</h2>
+                            <h2>Rev. Franklin Minja</h2>
                             <p>
-                                Never leave your friends behind, let them experience the goodness of God here at City
-                                Harvest.
+                                Local Church Pastor
                             </p>
-                            <div class="card-btns">
-                                <a href="#" class="btn event">Learn More</a>
-                            </div>
                         </div>
                     </div>
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-img">
                             <div class="card-inner">
-                                <img src="../assets/img/get-involved/serve.jpg" alt="" class="card-img-top img-fluid">
+                                <img src="../assets/img/pastors/pst-ayoub.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>Serve</h2>
+                            <h2>Ayoub</h2>
                             <p>
-                                At City Harvest, there are many opportunities to serve God. Let's do it together.
+                                Campus Pastor
                             </p>
-                            <div class="card-btns">
-                                <a href="#" class="btn event">Learn More</a>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -115,104 +141,40 @@
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-img">
                             <div class="card-inner">
-                                <img src="../assets/img/get-involved/volunteer.jpg" alt="" class="card-img-top img-fluid">
+                                <img src="../assets/img/pastors/pst-musa.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>Volunteer</h2>
+                            <h2>Latson Musa</h2>
                             <p>
-                                There is always a place for you, just ride in.
+                                Mission Pastor
                             </p>
-                            <div class="card-btns">
-                                <a href="#" class="btn event">Learn More</a>
-                            </div>
                         </div>
                     </div>
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-img">
                             <div class="card-inner">
-                                <img src="../assets/img/get-involved/outreach.jpg" alt=""
-                                    class="card-img-top img-fluid">
+                                <img src="../assets/img/pastors/pst-beata.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>OutReach</h2>
+                            <h2>Beata</h2>
                             <p>
-                                Go and make people disciples of chirst.
+                                Evangelism Pastor
                             </p>
-                            <div class="card-btns">
-                                <a href="#" class="btn event">Learn More</a>
-                            </div>
                         </div>
                     </div>
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-img">
                             <div class="card-inner">
-                                <img src="../assets/img/get-involved/give.jpg" alt=""
-                                    class="card-img-top img-fluid">
+                                <img src="../assets/img/pastors/pst-willy.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>Giving</h2>
+                            <h2>William</h2>
                             <p>
-                                Give generously and with a cheerful heart.
+                                Children Pastor
                             </p>
-                            <div class="card-btns">
-                                <a href="#" class="btn event">Learn More</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="even-columns">
-                    <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-img">
-                            <div class="card-inner">
-                                <img src="../assets/img/get-involved/prayer.jpg" alt=""
-                                    class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h2>Prayer Meetings</h2>
-                            <p>
-                                Get together every Friday to seek God and His power.
-                            </p>
-                            <div class="card-btns">
-                                <a href="#" class="btn event">Learn More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-img">
-                            <div class="card-inner">
-                                <img src="../assets/img/get-involved/bible.jpg" alt=""
-                                    class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h2>Bible Study</h2>
-                            <p>
-                                Get together every Wednesday to learn the word of God.
-                            </p>
-                            <div class="card-btns">
-                                <a href="#" class="btn event">Learn More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-img">
-                            <div class="card-inner">
-                                <img src="../assets/img/get-involved/groups.jpg" alt=""
-                                    class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h2>WELL.COM GROUPS</h2>
-                            <p>
-                                Fellowship with other members weekly in small groups.
-                            </p>
-                            <div class="card-btns">
-                                <a href="#" class="btn event">Learn More</a>
-                            </div>
                         </div>
                     </div>
                 </div>
