--- a/cityharvest/app/leaders.html
+++ b/cityharvest/app/leaders.html
@@ -130,7 +130,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>Ayoub</h2>
+                            <h2>Ayoub Samson</h2>
                             <p>
                                 Campus Pastor
                             </p>
@@ -147,7 +147,7 @@
                         <div class="card-body">
                             <h2>Latson Musa</h2>
                             <p>
-                                Mission Pastor
+                                Missions Pastor
                             </p>
                         </div>
                     </div>
@@ -158,7 +158,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>Beata</h2>
+                            <h2>Beatha Deus</h2>
                             <p>
                                 Evangelism Pastor
                             </p>
@@ -171,7 +171,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>William</h2>
+                            <h2>William Vitalis</h2>
                             <p>
                                 Children Pastor
                             </p>
